src/core-crm/objects/Plan_Activity__c/Plan_Activity__c.object-meta.xml
<CustomObject>
    <description>Plan Activity captures business interactions staff have with a Contact or Organisation.</description>
    <label>Plan Activity</label>
    <nameField>
        <label>Plan Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Activities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>