src/core-crm/objects/Plan_Activity__c/fields/Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>Contact_Channel__c</fullName>
    <description>The channel used to engage with the Contact.</description>
    <inlineHelpText>The channel used to engage with the Contact.</inlineHelpText>
    <label>Contact Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Virtual Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>