src/core-crm/objects/Plan_Activity__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date the Activity was actioned.</description>
    <inlineHelpText>The date the Activity was actioned.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>