src/core-crm/objects/Plan_Activity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Activity being undertaken.</description>
    <inlineHelpText>Description of the Activity being undertaken.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>