src/core-crm/objects/Plan_Activity__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an associated Opportunity record.</description>
    <inlineHelpText>Lookup to an associated Opportunity record.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Plan Activities</relationshipLabel>
    <relationshipName>Plan_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>