src/core-crm/objects/Plan_Activity__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>The outcome of the Activity.</description>
    <inlineHelpText>The outcome of the Activity.</inlineHelpText>
    <label>Outcome</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>