src/core-crm/objects/Plan_Activity__c/fields/Stewardship__c.field-meta.xml
<CustomField>
    <fullName>Stewardship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an associated Stewardship record.</description>
    <inlineHelpText>Lookup to an associated Stewardship record.</inlineHelpText>
    <label>Stewardship</label>
    <referenceTo>Stewardship__c</referenceTo>
    <relationshipLabel>Plan Activities</relationshipLabel>
    <relationshipName>Plan_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>